# rsrv

./: .envrc  .gitignore  .gitmodules  Cargo.toml  build.native.sh  dev.sh  env.sh  init.sh  run.sh  service  service.sh
anypack/: .gitignore  Cargo.toml  README.md  test.py
anypack/src/: fn_any.rs  lib.rs  tuple.rs
awp/: Cargo.toml  README.md
awp/src/: anypack.rs  err.rs  lib.rs  log.rs  srv.rs
client/: Cargo.toml
client/src/: lib.rs  user.rs
client_id/: Cargo.toml
client_id/src/: lib.rs
csdb/: Cargo.toml  README.md  README.mdt  dist.sh  out.txt  package.json  test.sh
csdb/src/: gen.py  into_val_li.rs  lib.rs  val.rs  val_li.rs
csdb/tests/: test.rs
envport/: Cargo.toml
envport/src/: lib.rs
gid/: Cargo.toml
gid/src/: lib.rs
gt/: Cargo.toml
gt/src/: lib.rs
init/: Cargo.toml  init.sql
init/src/: main.rs  queryer.rs  sql.rs
loginit/: Cargo.toml  dist.sh
loginit/src/: lib.rs
pgw/: Cargo.toml  README.md  README.mdi.md  dev.sh  dist.sh
pgw/src/: lib.rs
pgw/tests/: main.rs
rsrv/: Cargo.toml  Dockerfile  dev.sh  docker.run.sh  run.sh
rsrv/src/: K.rs  cid.rs  cs.rs  csdb.rs  db.rs  es.rs  main.rs  ws.rs
rsrv/src/C/: mod.rs  ws.rs
rsrv/src/c/: action.rs  mod.rs
rsrv/src/db/: mod.rs  rec.rs  score.rs  seen.rs  ws.rs
rsrv/src/db/img/: mod.rs  rec.rs
rsrv/src/kv/: sync.rs
rsrv/src/url/: es.rs  fav.rs  favYm.rs  hr.rs  li.rs  liMeta.rs  log.rs  meta.rs  mod.rs  nchan.rs  q.rs  rec.rs  seen.rs  star.rs  test.rs  userFav.rs  ws.rs
src/: main.rs
src/url/: li.rs  mod.rs  sampler.rs  sampler_id.rs  star.rs
st/: Cargo.toml
testbin/: Cargo.toml
testbin/src/: main.rs
trt/: Cargo.toml
trt/src/: lib.rs
x0/: Cargo.toml
x0/src/: lib.rs
xc/: Cargo.toml
xc/src/: action.rs  cid.rs  lib.rs
xerr/: Cargo.toml
xkv/: Cargo.toml
xkv/src/: lib.rs
xuser/: Cargo.toml
xuser/src/: lib.rs  user.rs
xws/: Cargo.toml  dev.sh  run.sh
xws/src/: C.rs  accept.rs  header_user.rs  main.rs  recv.rs  type.rs  user_ws.rs
xws/src/db/: fav.rs  fav_insert.rs  mod.rs  rec.rs  seen.rs  seen_insert.rs
xws/src/recv/: log.rs  mod.rs  sync.rs
xws/todo/: db.rs  log.rs  ws.rs
xws/todo/url/: fav.rs  seen.rs
xwsrpc/: Cargo.toml
xwsrpc/src/: lib.rs  main.rs
xwsrpc/volo-gen/: Cargo.toml
xxai/: Cargo.toml  README.md  run.sh
xxai/src/: diffli.rs  lib.rs  nd.rs  score.rs  str.rs  time.rs  tld.rs  today.rs  vbyte_decode.rs
xxpg/: .gitignore  Cargo.toml  README.md
xxpg/src/: lib.rs
xxpg/tests/: main.rs
xxpg/xxpg_proc/: Cargo.toml
xxpg/xxpg_proc/src/: lib.rs
