[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6.20"
xkv = "0.1.11"
x0 = { path = "../x0" }
xxai = { path = "../xxai" }
http = "0.2.9"
xuser = { path = "../xuser" }
anyhow = "1.0.75"
awp = { path = "../awp" }
