[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6.20"
http = "0.2.9"
xuser = { path = "../xuser" }
awp = { path = "../awp" }
tracing = "0.1.40"
thiserror = "1.0.50"
