[package]
name = "client_id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6.18"
ctor = "0.2.2"
trt = "0.1.1"
xkv = "0.1.9"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
x0 = { path = "../x0" }
xxai = { path = "../xxai" }
http = "0.2.9"
gid = { path = "../gid" }
