[package]
name = "csdb"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "wrap for ceresdb-client-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1.37"
ceresdb-client = { version = "1.0.1", path = "../lib/ceresdb-client-rs" }
