[package]
name = "csdb"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "wrap for ceresdb-client-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1.37"
ceresdb-client = { version = "1.0.1", path = "../lib/ceresdb-client-rs" }
coarsetime = "0.1.23"
dyn-fmt = "0.3.0"
num-traits = "0.2.15"
aho-corasick = "1.0.2"
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1.0.71"
loginit = { path = "../loginit" }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }