[package]
name = "gid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
coarsetime = "0.1.33"
ctor = "0.2.5"
fred = "7.0.0"
paste = "1.0.14"
tokio = { version = "1.33.0", features = ["parking_lot"] }
trt = { path = "../trt" }
x0 = { path = "../x0" }

[dev-dependencies]
tokio-test = "0.4.3"
