[package]
name = "gt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-postgres = { package = "xxai-tokio-postgres", version = "0.7.13" }
pgw = { path = "../pgw" }
tracing = "0.1.37"
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
tokio = { version = "1.31.0", features = ["macros", "rt", "rt-multi-thread"] }
trt = { version = "0.1.5", path = "../trt" }
ctor = "0.2.4"
