[package]
name = "loginit"
version = "0.1.1"
edition = "2021"
license = "MulanPubL-2.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "init log for tracing use tracing_subscriber"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing-stackdriver = { version = "0.7.2", optional = true }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
stackdriver = ["tracing-stackdriver"]
