[package]
name = "pgw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
parking_lot = "0.12.1"
tokio = { version = "1.31.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-postgres = { package = "xxai-tokio-postgres", version = "0.7.13" }
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.74"
loginit = { path = "../loginit" }
