[package]
name = "rsrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
anypack = { path = "../anypack" }
tracing = "0.1.37"
axum = "0.6.20"
tower = { version = "0.4.13", features = ["timeout"] }
const-str = "0.5.6"
futures-util = "0.3.28"
tower-http = { version = "0.4.3", features = ["cors", "tokio"] }
ctor = "0.2.4"
trt = { version = "0.1.5" }
# trt = { version = "0.1.4", path = "../trt" }
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
client = { path = "../client" }
x0 = { path = "../x0" }
xxai = { path = "../xxai", features = ["ndarray"] }
awp = { path = "../awp" }
xxpg = { path = "../xxpg" }
lazy_static = "1.4.0"
coarsetime = "0.1.23"
serde_json = "1.0.105"
serde = { version = "1.0.183", features = ["derive"] }
vbyte = "0.1.0"
paste = "1.0.14"
gt = { path = "../gt" }
z85 = "3.0.5"
clip_search_txt_client = "0.1.5"

# quinn = { version = "0.10", default-features = false, features = [
#   "runtime-tokio",
#   "tls-rustls",
#   "ring"
# ] }
[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread"]

[dependencies.reqwest]
version = "0.11.18"
features = ["tokio-rustls"]
# features = ["tokio-rustls", "http3"]
