[package]
name = "st"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "shortcut for xxai.art"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
xkv = "0.1.8"
