[package]
name = "x0"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "shortcut for xxai.art"
license = "SSPL-1.0"

[dependencies]
fred = { version = "6.3.0", features = ["replicas", "rustls"] }
xkv = "0.1.8"
