[package]
name = "xerr"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "log error util"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = "0.1.37"
