[package]
name = "xuser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ctor = "0.2.5"
xxai = { path = "../xxai" }
trt = { path = "../trt" }
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
x0 = { path = "../x0" }
ub64 = { version = "0.0.10", features = ["u64li"] }
cookie = "0.18.0"
anyhow = "1.0.75"
gid = { path = "../gid" }
vbyte = "0.1.0"
