[package]
name = "xws"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "xws : websocket gateway for xxai.art"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.20", features = ["ws", "headers"] }
envport = { version = "0.1.0", path = "../envport" }
headers = "0.3.9"
loginit = "0.1.3"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread", "rt", "time", "sync"]
