[package]
name = "xws"
version = "0.1.0"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "xws : websocket gateway for xxai.art"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
cookie = "0.17.0"
envport = { version = "0.1.0", path = "../envport" }
http = "0.2.9"
loginit = "0.1.3"
ratchet_rs = { version = "0.4.1", features = [
  "ratchet_deflate",
  "split",
  "deflate"
] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = "0.1.37"
trt = { version = "0.1.5", path = "../trt" }
ub64 = { version = "0.0.10", features = ["u64"] }

[dependencies.tokio]
version = "1.32.0"
features = ["macros", "rt-multi-thread", "rt", "time", "sync"]
