[package]
name = "xxpg"
version = "0.1.19"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/rsrv"
repository = "https://github.com/xxai-art/rsrv.git"
description = "easy use prepared sql for postgresql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
axum = "0.6.19"
ctor = "0.2.4"
msgpacker = "0.4.3"
paste = "1.0.14"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tokio-postgres = { package = "xxai-tokio-postgres", version = "0.7.13" }
tracing = "0.1.37"
trt = "0.1.5"
xxpg_proc = { path = "./xxpg_proc", version = "0.1.7" }
