[package]
name = "xxpg_proc"
version = "0.1.7"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/xxpg"
repository = "https://github.com/xxai-art/xxpg.git"
description = "easy use prepared sql for postgresql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
lazy_static = "1.4.0"
proc-macro2 = "1.0.66"
regex = "1.9.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tokio-postgres = { package = "xxai-tokio-postgres", version = "0.7.13" }
trt = "0.1.5"
pgw = { path = "../../pgw" }
