[package]
name = "xxpg_proc"
version = "0.1.7"
edition = "2021"
license = "SSPL-1.0"
homepage = "https://github.com/xxai-art/xxpg"
repository = "https://github.com/xxai-art/xxpg.git"
description = "easy use prepared sql for postgresql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
async-lazy = { version = "0.1.0", features = ["parking_lot", "nightly"] }
lazy_static = "1.4.0"
pgw = "0.1.5"
proc-macro2 = "1.0.66"
regex = "1.9.3"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tokio-postgres = { package = "xxai-tokio-postgres", version = "0.7.15" }
trt = "0.1.5"
